--- a/index.html
+++ b/index.html
@@ -62,17 +62,19 @@
         return false;
     }());
 
-    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        container.className = "unity-mobile";
-        //config.devicePixelRatio = 1;
-    }
-    loadingCover.style.display = "";
-
     let player;
     let leaderboard;
     let myGameInstance = null;
     let payments = null;
     let promptCanShow = false;
+    let mobile = false;    
+
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        container.className = "unity-mobile";
+        mobile = true;
+        //config.devicePixelRatio = 1;
+    }
+    loadingCover.style.display = "";
 
     const script = document.createElement("script");
     script.src = loaderUrl;
@@ -317,8 +319,11 @@
         .catch(error => {
             myGameInstance.SendMessage('VkBridge', 'SendResult', JSON.stringify(error));
         });;
-      }  
+    }
 
+    function CheckMobile() {
+        myGameInstance.SendMessage('VkBridge', 'CheckMobileResult', mobile);
+    }
     
 </script>
 </body>
